--- a/Tasks/Views/Base.lproj/Main.storyboard
+++ b/Tasks/Views/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Task List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Tasks" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TaskListViewController" customModule="Tasks" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -82,7 +82,7 @@
                         <viewLayoutGuide key="safeArea" id="U11-Aa-sjz"/>
                     </view>
                     <connections>
-                        <outlet property="field" destination="JUV-xC-7NC" id="Hey-cY-foc"/>
+                        <outlet property="textField" destination="JUV-xC-7NC" id="Hey-cY-foc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JSp-lS-UBh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
